Silent a few warnings about unused parameters https://bugs.webkit.org/show_bug.cgi?id=172169

Reviewed by Sam Weinig.

* page/Page.cpp:
(WebCore::Page::mainFrameLoadStarted):
* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::toData):
* platform/network/ResourceRequestBase.cpp:
(WebCore::ResourceRequestBase::partitionName):


Canonical link: https://commits.webkit.org/189107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216937 268f45cc-cd09-0410-ab3c-d52691b4dbfc